make changes on authserver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 
-server.port=9001
-#server.servlet.context-path=/service
+server.port=8088
+server.servlet.context-path=/service
 #spring.security.user.name=kabaka
 #spring.security.user.password=pass
 #spring.security.user.roles=USER
 
 #auth2 details
+
 security.oauth2.client.client-id=springdeveloper123
 security.oauth2.client.client-secret=test
-security.o auth2.client.authorized-grant-types=password,client_credentials,authorization_code,refresh_token
+security.oauth2.client.authorized-grant-types=password,client_credentials,authorization_code,refresh_token
 security.oauth2.client.scope=read,write
 
-spring.datasource.url=jdbc:mysql://localhost:3307/authserver
+spring.datasource.url=jdbc:mysql://localhost:3306/authserver
 spring.datasource.username=root
+spring.datasource.password=lievre
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
