--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.context-path=/service
 #auth2 details
 
 security.oauth2.client.client-id=springdeveloper123
-security.oauth2.client.client-secret=test
+security.oauth2.client.client-secret=password
 security.oauth2.client.authorized-grant-types=password,client_credentials,authorization_code,refresh_token
 security.oauth2.client.scope=read,write
 
